Modified html document files.

--- a/_udas_doc.html
+++ b/_udas_doc.html
@@ -2,17 +2,17 @@
 <html>
  
 <head>
-<TITLE>Help for udas_1_00_b3</TITLE>
+<TITLE>Help for udas_1_00_b4</TITLE>
 </head>
  
 <body>
-<H2>Help for udas_1_00_b3</H2>
+<H2>Help for udas_1_00_b4</H2>
 <P>
 This page was created by the IDL library routine 
 <CODE>mk_html_help2</CODE>.
 <br>
 <P>
-<STRONG>Last modified: </STRONG>Mon Aug  1 23:14:36 2011.<P>
+<STRONG>Last modified: </STRONG>Thu Dec  1 14:14:50 2011.<P>
  
 <HR>
  
@@ -47,6 +47,7 @@ iugonet/erg_ground/radar/superdarn</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html">iugonet/examples</A>
 <LI><A HREF="iugonet/gui_udas_doc_list.html">iugonet/gui</A>
 <LI><A HREF="iugonet/load_udas_doc_list.html">iugonet/load</A>
+<LI><A HREF="iugonet/tools_udas_doc_list.html">iugonet/tools</A>
 </UL><P>
 <HR>
 <P>
@@ -85,6 +86,10 @@ IUG_CRIB_EISCAT</A>
 IUG_CRIB_GMAG_NIPR</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_GMAG_SERC">
 IUG_CRIB_GMAG_SERC</A>
+<LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_GMAG_WDC">
+IUG_CRIB_GMAG_WDC</A>
+<LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_IPRT">IUG_CRIB_IPRT
+</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_LTR_RISH_TXT">
 IUG_CRIB_LTR_RISH_TXT</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_METEOR_RISH_KTB_NC">
@@ -94,6 +99,8 @@ IUG_CRIB_METEOR_RISH_SRP_NC</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_MF_RISH_PAM_NC">
 IUG_CRIB_MF_RISH_PAM_NC</A>
 <LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_MU">IUG_CRIB_MU</A>
+<LI><A HREF="iugonet/examples_udas_doc_list.html#IUG_CRIB_WPR_RISH_TXT">
+IUG_CRIB_WPR_RISH_TXT</A>
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_BLR_RISH_TXT">
 IUG_LOAD_BLR_RISH_TXT</A>
 <br>Queries the Kyoto_RISH server for the CSV data (uwnd, vwnd, wwnd, pwr1-5, wdt1-5)
@@ -197,6 +204,9 @@ IUG_LOAD_MU_TROP_NC</A>
 IUG_LOAD_MU_TROP_TXT</A>
 <br>Queries the Kyoto_RISH servers for the standard observation data of the
 <LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_SDFIT">IUG_LOAD_SDFIT</A>
+<LI><A HREF="iugonet/load_udas_doc_list.html#IUG_LOAD_WPR_RISH_TXT">
+IUG_LOAD_WPR_RISH_TXT</A>
+<br>Queries the Kyoto_RISH servers for the observation data (uwnd, vwnd, wwnd, pwr1-5, wdt1-5)
 <A NAME="LIST_L">
 <LI><A HREF="iugonet/erg_ground/radar/superdarn_udas_doc_list.html#LOADCT_SD">
 LOADCT_SD</A>
@@ -209,9 +219,10 @@ OVERLAY_MAP_SDFIT">OVERLAY_MAP_SDFIT</A>
 <LI><A HREF="iugonet/erg_ground/radar/superdarn_udas_doc_list.html#
 PLOT_MAP_SDFIT">PLOT_MAP_SDFIT</A>
 <br>Draw a fan plot of SD data on the world map
+<LI><A HREF="iugonet/tools_udas_doc_list.html#PRINT_STR_MAXLET">PRINT_STR_MAXLET
+</A>
+<br>Print a string with the maximum number of letters in one line.
 <A NAME="LIST_S">
-<LI><A HREF="iugonet/erg_ground/radar/superdarn_udas_doc_list.html#SD_AACGMLIB">
-SD_AACGMLIB</A>
 <LI><A HREF="iugonet/erg_ground/radar/superdarn_udas_doc_list.html#SD_INIT">
 SD_INIT</A>
 <LI><A HREF="iugonet/erg_ground/radar/superdarn_udas_doc_list.html#SD_MAP_SET">
