Modified html document files.

--- a/iugonet/examples_udas_doc_list.html
+++ b/iugonet/examples_udas_doc_list.html
@@ -11,7 +11,7 @@ This page was created by the IDL library routine
 <CODE>mk_html_help2</CODE>.
 <br>
 <P>
-<STRONG>Last modified: </STRONG>Thu Dec  1 14:14:50 2011.<P>
+<STRONG>Last modified: </STRONG>Sat Dec  3 00:16:58 2011.<P>
  
 <HR>
  
@@ -43,6 +43,8 @@ This page was created by the IDL library routine
 <A HREF="#IUG_CRIB_BLR_RISH_TXT">[Next Routine]</A>
 <A HREF="#ROUTINELIST">[List of Routines]</A>
 <PRE>
+PROCEDURE: erg_crib_superdarn
+ 
  :DESCRIPTION:
     A crib sheet to demonstrate how procedures/functions for 
     SuperDARN data work.
@@ -58,8 +60,8 @@ This page was created by the IDL library routine
     2010/06/24: Created
 
  $LastChangedBy: horit $
- $LastChangedDate: 2011-01-13 22:09:59 +0900 (Thu, 13 Jan 2011) $
- $LastChangedRevision: 101 $
+ $LastChangedDate: 2011-10-07 16:20:42 +0900 (Fri, 07 Oct 2011) $
+ $LastChangedRevision: 159 $
  $URL: http://gemsissc.stelab.nagoya-u.ac.jp/svn/ergsc/trunk/erg/examples/erg_crib_superdarn.pro $
 </PRE><P>
 <STRONG>(See <A href="examples/erg_crib_superdarn.pro">iugonet/examples/erg_crib_superdarn.pro</A>)</STRONG><P>
@@ -98,7 +100,7 @@ PROCEDURE: IUG_CRIB_EAR.PRO
         .run iug_crib_ear
 
 Written by: A. Shinbori,  Feb 18, 2011
-Last Updated:  A. Shinbori,  Feb 18, 2011
+Last Updated:  A. Shinbori,  Dec 02, 2011
 </PRE><P>
 <STRONG>(See <A href="examples/iug_crib_ear.pro">iugonet/examples/iug_crib_ear.pro</A>)</STRONG><P>
 <HR>
