--- a/iugonet/load_udas_doc_list.html
+++ b/iugonet/load_udas_doc_list.html
@@ -11,7 +11,7 @@ This page was created by the IDL library routine
 <CODE>mk_html_help2</CODE>.
 <br>
 <P>
-<STRONG>Last modified: </STRONG>Thu Dec  1 14:14:50 2011.<P>
+<STRONG>Last modified: </STRONG>Sat Dec  3 00:16:58 2011.<P>
  
 <HR>
  
@@ -501,7 +501,8 @@ CODE:
 MODIFICATIONS:
  A. Shinbori, 24/03/2011.
  A. Shinbori, 09/07/2011.
-
+ A. Shinbori, 01/12/2011.
+ 
 ACKNOWLEDGEMENT:
  $LastChangedBy:  $
  $LastChangedDate:  $
